--- a/style.css
+++ b/style.css
@@ -90,5 +90,16 @@ a:hover {
   width: 100%;
   height: 2px;
   background-color: black;
-  transition: all 0.3;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
 }
