--- a/style.css
+++ b/style.css
@@ -372,3 +372,40 @@ section {
   color: black;
   border-color: rgb(163, 163, 163);
 }
+
+/* CONTACT */
+
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53);
+  border-color: rgb(163, 163, 163);
+  background: rgb(255, 255, 255);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-icon {
+  cursor: default;  
+}
+
+.email-icon {
+  height: 2.5rem;
+}
+
