--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ section {
   border-radius: 2rem;
   border: rgb(53, 53, 53);
   border-color: rgb(163, 163, 163);
-  background: rgb(255, 255, 255);
+  background: rgb(250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
 }
@@ -409,3 +409,13 @@ section {
   height: 2.5rem;
 }
 
+/* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0.1rem;
+}
+
+footer p {
+  text-align: center;
+}
