--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,8 +1,33 @@
+@media screen and (max-width: 1400px) {
+  #profile {
+    height: 83vh;
+    margin-bottom: 6rem;
+  }
+  .about-containers {
+    flex-wrap: wrap;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
   }
   #hamburger-nav {
     display: flex;
+  }
+  #exprerience, .experience-details-container {
+    margin-top: 2rem;
+  }
+  #profile, .section-container {
+    display: block;
+  }
+  .arrow {
+    display: none;
+  }
+  section, .section-container {
+    height: fit-content;
+  }
+  section {
+    margin: 0.5%;
   }
 }
