--- a/style.css
+++ b/style.css
@@ -338,8 +338,10 @@ section {
 .article {
   display: flex;
   width: 10rem;
-  justify-content: space-around;
+  justify-content: start;
   gap: 0.5rem;
+  align-items: center;
+  padding: 10px;
 }
 
 .article.icon {
@@ -358,9 +360,9 @@ section {
 }
 
 .project-img {
-  border-radius: 2rem;
-  width: 70%;
-  height: 70%;
+  border-radius: 1rem;
+  width: 80%;
+  height: 100%;
 }
 
 .project-title {
@@ -373,24 +375,29 @@ section {
   border-color: rgb(163, 163, 163);
 }
 
-/* CONTACT */
+/* CONTACT SECTION */
 
 #contact {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  gap: 2rem; 
   height: 70vh;
+  padding: 2rem; 
+  background: rgb(255, 255, 255); 
+  border-radius: 2rem; 
+  border: rgb(163, 163, 163) 0.1rem solid; 
 }
 
 .contact-info-upper-container {
   display: flex;
-  justify-content: center;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53);
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
-  margin: 2rem auto;
-  padding: 0.5rem;
+  flex-direction: column; 
+  align-items: center; 
+  padding: 2rem; 
+  border-radius: 2rem; 
+  background: rgb(250, 250, 250); 
+  border: rgb(163, 163, 163) 0.1rem solid; 
 }
 
 .contact-info-container {
@@ -402,7 +409,13 @@ section {
 }
 
 .contact-icon {
-  cursor: default;  
+  cursor: default;
+  height: 2.5rem;
+}
+
+.contact p {
+  padding: 1rem;
+  text-align: center;
 }
 
 .email-icon {
