Update 10 almost finished

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -30,4 +30,56 @@
   section {
     margin: 0.5%;
   }
+  .section__pic-container {
+    width: 275px;
+    height: 275px;
+    margin: auto 2rem;
+  }
+  .about-containers {
+    margin-top: 0;
+
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #contact, footer {
+    height: 40vh;
+  }
+  #profile {
+    height: 83vh;
+    margin-bottom: 0;
+  }
+  footer nav {
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+  .about-containers, .contact-info-upper-container, .btn-container {
+    flex-wrap: wrap;
+  }
+  .contact-info-container {
+    margin: 0;
+  }
+  .contact-info-container p, .nav-links li a {
+    font-size: 1rem;
+  }
+  .experience-sub-title {
+    font-size: 1.25rem;
+  }
+  .logo {
+    font-size: 1.5rem;
+  }
+  .nav-links {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+  }
+  .secttion__text__p2 {
+    font-size: 1.25;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  .text-container {
+    text-align: justify;
+  }
 }
